Fixed offset for map BJ face image; raised map bj z-index (higher than sprites)

--- a/styles.css
+++ b/styles.css
@@ -206,6 +206,7 @@ border: white 1px solid;e .renderer div img,
 }
 
 #map .bj {
+    z-index: 50;
     top: 50%;
     left: 50%;
     /*display: none;*/
